--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.9]
 
     steps:
     - uses: actions/checkout@v2
@@ -25,6 +25,17 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Start PostgreSQL on Ubuntu
+      run: |
+        sudo systemctl start postgresql.service
+        pg_isready
+    - name: Create user
+      run: |
+        sudo -u postgres psql --command="CREATE USER mmarcus" --command="\du"
+    - name: Create mysite database
+      run: |
+        sudo -u postgres createdb --owner=mmarcus mysite
+        psql --username=mmarcus --host=localhost --list timetable
     - name: Run Tests
       run: |
         python manage.py test
