--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -31,11 +31,11 @@ jobs:
         pg_isready
     - name: Create user
       run: |
-        sudo -u postgres psql --command="CREATE USER mmarcus" --command="\du"
+        sudo -u postgres psql --command="CREATE USER mmarcus PASSWORD 'secret'" --command="\du"
     - name: Create mysite database
       run: |
         sudo -u postgres createdb --owner=mmarcus mysite
-        psql --username=mmarcus --host=localhost --list timetable
+        PGPASSWORD=secret psql --username=mmarcus --host=localhost --list mysite
     - name: Run Tests
       run: |
         python manage.py test
