--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,15 +25,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Start PostgreSQL on Ubuntu
+    - name: Initialize Database
       run: |
         sudo systemctl start postgresql.service
         pg_isready
-    - name: Create user
-      run: |
         sudo -u postgres psql --command="CREATE USER mmarcus PASSWORD 'secret'" --command="\du"
-    - name: Create mysite database
-      run: |
         sudo -u postgres createdb --owner=mmarcus mysite
         PGPASSWORD=secret psql --username=mmarcus --host=localhost --list mysite
     - name: Run Tests
