--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -21,16 +21,18 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
     - name: Initialize Database
       run: |
         sudo systemctl start postgresql.service
         pg_isready
         sudo -u postgres psql --command="CREATE USER mmarcus PASSWORD 'secret'" --command="ALTER USER mmarcus CREATEDB" --command="\du"
-        PGPASSWORD=secret psql --username=mmarcus --host=localhost --list mysite
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Collect Static Files
+      run: |
+        python manage.py collectstatic
     - name: Run Tests
       run: |
         python manage.py test
